adding eureka URL server to itself so it wont try to register

--- a/sherlock/src/main/resources/application.yml
+++ b/sherlock/src/main/resources/application.yml
@@ -6,3 +6,6 @@ spring:
 eureka:
   client:
     register-with-eureka: false
+    fetch-registry: false
+    service-url:
+          defaultZone: http://localhost:8010/eureka
