--- a/station/src/main/resources/application.yml
+++ b/station/src/main/resources/application.yml
@@ -2,9 +2,13 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8010/eureka
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 server:
-  port: 8081
+  port: 0
 spring:
   application:
     name: station
 openWeatherApiKey: xxx
+
