adding zuul routes

--- a/morannon/src/main/resources/application.yml
+++ b/morannon/src/main/resources/application.yml
@@ -7,3 +7,8 @@ server:
 spring:
   application:
     name: morannon
+zuul:
+  routes:
+    weather:
+      path: /weather**
+      serviceId: station
