--- a/station/build.gradle
+++ b/station/build.gradle
@@ -47,6 +47,8 @@ ext {
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-server')
 	compile('org.springframework.cloud:spring-cloud-starter-openfeign')
+	compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
