--- a/station/src/main/resources/application.yml
+++ b/station/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
   application:
     name: station
 openWeatherApiKey: 8f73e4ce89ff3a776a8aa45b65c87e37
+redis:
+  insertionType: NX
+  expirationType: EX
+  expiresIn: 3600
