trying different zuul config

--- a/morannon/src/main/resources/application.yml
+++ b/morannon/src/main/resources/application.yml
@@ -7,8 +7,23 @@ server:
 spring:
   application:
     name: morannon
+
 zuul:
   routes:
     weather:
       path: /weather**
       serviceId: station
+
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 100000
+        timeout:
+          enabled: false
+
+ribbon:
+  ReadTimeout: 100000
+  ConnectTimeout: 100000
