--- a/station/src/main/resources/application.yml
+++ b/station/src/main/resources/application.yml
@@ -10,7 +10,7 @@ server:
 spring:
   application:
     name: station
-openWeatherApiKey: 8f73e4ce89ff3a776a8aa45b65c87e37
+openWeatherApiKey: xxx
 redis:
   insertionType: NX
   expirationType: EX
