--- a/morannon/build.gradle
+++ b/morannon/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
+	compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.2.RELEASE'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
