shortening zuul's cache upon fetching services from eureka

--- a/morannon/src/main/resources/application.yml
+++ b/morannon/src/main/resources/application.yml
@@ -1,7 +1,16 @@
 eureka:
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    lease-renewal-interval-in-seconds: 1
+    lease-expiration-duration-in-seconds: 2
   client:
-    service-url:
-      defaultZone: http://localhost:8010/eureka
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    registry-fetch-interval-seconds: 5
+    initial-instance-info-replication-interval-seconds: 0
+    instance-info-replication-interval-seconds: 1
 server:
   port: 8765
 spring:
@@ -18,9 +27,6 @@ hystrix:
   command:
     default:
       execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 100000
         timeout:
           enabled: false
 
