--- a/station/src/main/resources/application.yml
+++ b/station/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 eureka:
   client:
+    registerWithEureka: true
     service-url:
-      defaultZone: http://localhost:8010/eureka
+      defaultZone: http://localhost:8761/eureka
+    registry-fetch-interval-seconds: 5
   instance:
     instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 
@@ -15,3 +17,7 @@ redis:
   insertionType: NX
   expirationType: EX
   expiresIn: 3600
+
+ribbon:
+  ReadTimeout: 100000
+  ConnectTimeout: 100000
