adding trailing slash to zuul route

--- a/morannon/src/main/resources/application.yml
+++ b/morannon/src/main/resources/application.yml
@@ -20,8 +20,9 @@ spring:
 zuul:
   routes:
     weather:
-      path: /weather**
+      path: /weather/**
       serviceId: station
+  retryable: true
 
 hystrix:
   command:
