adding Hystrix to Station

--- a/morannon/src/main/resources/application.yml
+++ b/morannon/src/main/resources/application.yml
@@ -22,6 +22,9 @@ zuul:
     weather:
       path: /weather/**
       serviceId: station
+    cities:
+      path: /countries/**
+      serviceId: wallstreet
   retryable: true
 
 hystrix:
