creating aggregator and sending messages asynchronously with the request info

--- a/morannon/src/main/resources/application.yml
+++ b/morannon/src/main/resources/application.yml
@@ -25,6 +25,9 @@ zuul:
     cities:
       path: /countries/**
       serviceId: wallstreet
+    aggregator:
+      path: /aggregator/**
+      serviceId: aggregator
   retryable: true
 
 hystrix:
