--- a/aggregator/src/main/resources/application.yml
+++ b/aggregator/src/main/resources/application.yml
@@ -11,15 +11,4 @@ server:
   port: 0
 spring:
   application:
-    name: station
-openWeatherApiKey: xxx
-redis:
-  insertionType: NX
-  expirationType: EX
-  expiresIn: 3600
-
-ribbon:
-  ReadTimeout: 100000
-  ConnectTimeout: 100000
-logging:
-  file: application.log
+    name: aggregator
