--- a/morannon/build.gradle
+++ b/morannon/build.gradle
@@ -46,6 +46,8 @@ ext {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.cloud:spring-cloud-starter-sleuth')
+    compile('org.springframework.cloud:spring-cloud-starter-zipkin')
     compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
     compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
